--- a/delete_loadbalancer.yaml
+++ b/delete_loadbalancer.yaml
@@ -18,7 +18,7 @@
           - openstack_auth_url is defined
           - openstack_username is defined
           - openstack_password is defined
-          - openstack_project_name is defined
+          - (openstack_project_name is defined) or (openstack_project_id is defined)
         fail_msg: "ERRORE: Variabili richieste mancanti!"
 
     - name: Log start
@@ -52,9 +52,51 @@
       ignore_errors: yes
 
     # ========================================
-    # AUTHENTICATE OPENSTACK
+    # AUTHENTICATE OPENSTACK KEYSTONE (MULTI-TENANT)
     # ========================================
-    - name: Authenticate to OpenStack Keystone
+    - name: Validate OpenStack credentials
+      assert:
+        that:
+          - openstack_auth_url is defined
+          - openstack_username is defined
+          - openstack_password is defined
+          - openstack_project_id is defined or openstack_project_name is defined
+        fail_msg: "❌ Credenziali OpenStack mancanti!"
+
+    - name: Determine authentication method
+      set_fact:
+        use_project_id: "{{ openstack_project_id is defined and openstack_project_id != '' }}"
+
+    - name: Log authentication
+      debug:
+        msg: "🔐 Autenticazione OpenStack: {{ 'Project ID (UUID)' if use_project_id else 'Project Name' }} = {{ openstack_project_id if use_project_id else openstack_project_name }}"
+
+    - name: Authenticate with project ID
+      uri:
+        url: "{{ openstack_auth_url }}/v3/auth/tokens"
+        method: POST
+        body:
+          auth:
+            identity:
+              methods:
+                - password
+              password:
+                user:
+                  name: "{{ openstack_username }}"
+                  domain:
+                    name: "{{ openstack_domain_name | default('Default') }}"
+                  password: "{{ openstack_password }}"
+            scope:
+              project:
+                id: "{{ openstack_project_id }}"
+        body_format: json
+        status_code: 201
+        return_content: yes
+        validate_certs: no
+      register: auth_with_id
+      when: use_project_id | bool
+
+    - name: Authenticate with project name
       uri:
         url: "{{ openstack_auth_url }}/v3/auth/tokens"
         method: POST
@@ -78,7 +120,12 @@
         status_code: 201
         return_content: yes
         validate_certs: no
-      register: auth_response
+      register: auth_with_name
+      when: not (use_project_id | bool)
+
+    - name: Set unified auth response
+      set_fact:
+        auth_response: "{{ auth_with_id if (auth_with_id is defined and not auth_with_id.skipped | default(false)) else auth_with_name }}"
 
     - name: Extract auth token
       set_fact:
@@ -87,6 +134,10 @@
     - name: Parse service catalog
       set_fact:
         service_catalog: "{{ auth_response.json.token.catalog }}"
+
+    - name: Log successful authentication
+      debug:
+        msg: "✅ Autenticato su OpenStack | Tenant: {{ openstack_project_name | default(openstack_project_id) }}"
 
     # ========================================
     # FIND OCTAVIA ENDPOINT
